# barekat-Advanced-Cell-Therapy-Products

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  data  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_phase2_auth_audit.py
data/models/: registry.json
docker/postgres/: init.sql
docs/: API.md  ARCHITECTURE.md  INFRASTRUCTURE.md
scripts/: evaluate_model.py  generate_data.py  setup.sh  train_model.py
src/barekat_cell_therapy/: __init__.py
src/barekat_cell_therapy/api/: main.py
src/barekat_cell_therapy/api/routes/: audit.py  auth.py  designs.py  health.py  ml.py  patients.py  therapy.py
src/barekat_cell_therapy/core/: __init__.py  config.py  database.py  metrics.py  rbac.py  security.py  storage.py
src/barekat_cell_therapy/data/: __init__.py  synthetic.py
src/barekat_cell_therapy/ml/: __init__.py  evaluation.py  explainability.py  predictor.py  registry.py  trainer.py
src/barekat_cell_therapy/models/: __init__.py  patient.py  user.py
src/barekat_cell_therapy/pipeline/: __init__.py  car_design.py  clinical_narrative.py  protocol.py  simulation.py  target_selection.py
src/barekat_cell_therapy/schemas/: __init__.py
src/barekat_cell_therapy/services/: audit.py  therapy.py
src/barekat_cell_therapy/tasks/: __init__.py  celery_app.py
static/: index.html
tests/: test_health.py  test_maturity.py  test_pipeline.py  test_security.py  test_synthetic.py
